crates/memscribe-testkit/tests/snapshots/nodes__cursor__v1__ban.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "cur-sess-003",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "We will never add a dependency on left-pad. Use the standard library padding instead, always.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "Use",
        "offset": 44
      },
      {
        "rule_id": "ban.negated_use",
        "category": "ban",
        "matched_text": "never add",
        "offset": 8
      },
      {
        "rule_id": "imperative.must_always_never",
        "category": "imperative",
        "matched_text": "never",
        "offset": 8
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/cursor/v1/ban.jsonl",
        "byte_offset": 162,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "We will never add a dependency on left-pad.",
    "considered_options": [],
    "is_ban": true,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T16:20:00Z"
  },
  {
    "node": "episode",
    "path": "src/format.rs",
    "diff": {
      "path": "src/format.rs",
      "old": "use left_pad::left_pad;\nlet s = left_pad(id, 8);",
      "new": "let s = format!(\"{id:>8}\");",
      "unified": "@@ -1,2 +1 @@\n-use left_pad::left_pad;\n-let s = left_pad(id, 8);\n+let s = format!(\"{id:>8}\");\n",
      "added_lines": 1,
      "removed_lines": 2
    },
    "git": {
      "sha": "a17de4490b22",
      "branch": "main"
    },
    "episode_id": "c91c60a318d5d4d7b552f4cde429d542f10ec282629508007588fcacb301e6b2"
  },
  {
    "node": "binding",
    "from": "decision:cur-sess-003:1",
    "to": "episode:c91c60a318d5d4d7b552f4cde429d542f10ec282629508007588fcacb301e6b2",
    "relation": "produced",
    "prov": {
      "used_session": "cur-sess-003",
      "used_decision": "decision:cur-sess-003:1",
      "was_generated_by_session": "cur-sess-003",
      "t_use": "2026-06-22T16:20:00Z",
      "t_gen": "2026-06-22T16:20:11Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
