crates/memscribe-testkit/tests/snapshots/nodes__cursor__v1__happy_path_decision_then_edits.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "cur-sess-001",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Postgres instead of MySQL for the orders service. Update the config and the connection module.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 19
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/cursor/v1/happy_path_decision_then_edits.jsonl",
        "byte_offset": 181,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Postgres instead of MySQL for the orders service.",
    "considered_options": [
      {
        "text": "MySQL",
        "chosen": false
      },
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T14:01:10Z"
  },
  {
    "node": "episode",
    "path": "config/database.toml",
    "diff": {
      "path": "config/database.toml",
      "old": "[database]\nengine = \"mysql\"\nport = 3306\n",
      "new": "[database]\nengine = \"postgres\"\nport = 5432\n",
      "unified": "@@ -1,3 +1,3 @@\n [database]\n-engine = \"mysql\"\n-port = 3306\n+engine = \"postgres\"\n+port = 5432\n",
      "added_lines": 2,
      "removed_lines": 2
    },
    "git": {
      "sha": "9f2c1ad4b7e0",
      "branch": "main"
    },
    "episode_id": "d47bc20d5db7fb6070d26165756dd148e877bcd96febb9232574f6edbf6ec037"
  },
  {
    "node": "episode",
    "path": "src/db/connect.rs",
    "diff": {
      "path": "src/db/connect.rs",
      "old": "let url = \"mysql://localhost:3306/orders\";",
      "new": "let url = \"postgres://localhost:5432/orders\";",
      "unified": "@@ -1 +1 @@\n-let url = \"mysql://localhost:3306/orders\";\n+let url = \"postgres://localhost:5432/orders\";\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "9f2c1ad4b7e0",
      "branch": "main"
    },
    "episode_id": "6e0f5572a9ce7d0bd617a39c474ef009f7c3c70719d798309b21b470d5888f50"
  },
  {
    "node": "binding",
    "from": "decision:cur-sess-001:1",
    "to": "episode:6e0f5572a9ce7d0bd617a39c474ef009f7c3c70719d798309b21b470d5888f50",
    "relation": "produced",
    "prov": {
      "used_session": "cur-sess-001",
      "used_decision": "decision:cur-sess-001:1",
      "was_generated_by_session": "cur-sess-001",
      "t_use": "2026-06-22T14:01:10Z",
      "t_gen": "2026-06-22T14:01:31Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:cur-sess-001:1",
    "to": "episode:d47bc20d5db7fb6070d26165756dd148e877bcd96febb9232574f6edbf6ec037",
    "relation": "produced",
    "prov": {
      "used_session": "cur-sess-001",
      "used_decision": "decision:cur-sess-001:1",
      "was_generated_by_session": "cur-sess-001",
      "t_use": "2026-06-22T14:01:10Z",
      "t_gen": "2026-06-22T14:01:18Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
