crates/memscribe-testkit/tests/snapshots/nodes__cursor__v1__multi_edit_single_commit.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "cur-sess-006",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's rename the HttpClient type to ApiClient everywhere. Use ApiClient as the canonical name across the codebase.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "Use",
        "offset": 58
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/cursor/v1/multi_edit_single_commit.jsonl",
        "byte_offset": 192,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Use ApiClient as the canonical name across the codebase.",
    "considered_options": [
      {
        "text": "ApiClient",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/client.rs",
    "diff": {
      "path": "src/client.rs",
      "old": "pub struct HttpClient {",
      "new": "pub struct ApiClient {",
      "unified": "@@ -1 +1 @@\n-pub struct HttpClient {\n+pub struct ApiClient {\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "f60718293a4b",
      "branch": "feat/rename-client"
    },
    "episode_id": "188c2124fa01d7e7257dad062d98755bc98e305a0fa1bb679eecf369854c1e46"
  },
  {
    "node": "episode",
    "path": "src/handlers.rs",
    "diff": {
      "path": "src/handlers.rs",
      "old": "use crate::client::HttpClient;\n    client: HttpClient,",
      "new": "use crate::client::ApiClient;\n    client: ApiClient,",
      "unified": "@@ -1,2 +1,2 @@\n-use crate::client::HttpClient;\n-    client: HttpClient,\n+use crate::client::ApiClient;\n+    client: ApiClient,\n",
      "added_lines": 2,
      "removed_lines": 2
    },
    "git": {
      "sha": "f60718293a4b",
      "branch": "feat/rename-client"
    },
    "episode_id": "4891323b455c8c3cd735d086f0ab6dfec12f6b1624752d6be92eec7992a7758f"
  },
  {
    "node": "episode",
    "path": "src/main.rs",
    "diff": {
      "path": "src/main.rs",
      "old": "    let client = HttpClient::new();",
      "new": "    let client = ApiClient::new();",
      "unified": "@@ -1 +1 @@\n-    let client = HttpClient::new();\n+    let client = ApiClient::new();\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "f60718293a4b",
      "branch": "feat/rename-client"
    },
    "episode_id": "aa7cff9cb3c19cc5924c6c7d05983c3a42dfc2d25a96743b23d92494f08bef85"
  },
  {
    "node": "binding",
    "from": "decision:cur-sess-006:1",
    "to": "episode:188c2124fa01d7e7257dad062d98755bc98e305a0fa1bb679eecf369854c1e46",
    "relation": "produced",
    "prov": {
      "used_session": "cur-sess-006",
      "used_decision": "decision:cur-sess-006:1",
      "was_generated_by_session": "cur-sess-006",
      "t_use": "2026-06-22T19:00:07Z",
      "t_gen": "2026-06-22T19:00:15Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:cur-sess-006:1",
    "to": "episode:4891323b455c8c3cd735d086f0ab6dfec12f6b1624752d6be92eec7992a7758f",
    "relation": "produced",
    "prov": {
      "used_session": "cur-sess-006",
      "used_decision": "decision:cur-sess-006:1",
      "was_generated_by_session": "cur-sess-006",
      "t_use": "2026-06-22T19:00:07Z",
      "t_gen": "2026-06-22T19:00:15Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:cur-sess-006:1",
    "to": "episode:aa7cff9cb3c19cc5924c6c7d05983c3a42dfc2d25a96743b23d92494f08bef85",
    "relation": "produced",
    "prov": {
      "used_session": "cur-sess-006",
      "used_decision": "decision:cur-sess-006:1",
      "was_generated_by_session": "cur-sess-006",
      "t_use": "2026-06-22T19:00:07Z",
      "t_gen": "2026-06-22T19:00:15Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
