crates/memscribe-testkit/tests/snapshots/nodes__cursor__v1__rewind_compaction.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "cur-sess-007",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use MongoDB for the document store. Set up the driver and the connection config.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/cursor/v1/rewind_compaction.jsonl",
        "byte_offset": 196,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use MongoDB for the document store.",
    "considered_options": [
      {
        "text": "MongoDB",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "conversation",
    "session_id": "cur-sess-007",
    "turn_range": {
      "start": 4,
      "end": 5
    },
    "text": "Actually let's use Postgres with JSONB for the document store instead. Switch to Postgres and drop the MongoDB plan.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 15
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/cursor/v1/rewind_compaction.jsonl",
        "byte_offset": 1415,
        "line_no": 5
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Actually let's use Postgres with JSONB for the document store instead.",
    "considered_options": [
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 4,
      "end": 5
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/store.rs",
    "diff": {
      "path": "src/store.rs",
      "old": "use mongodb::Client;\n    let client = Client::with_uri_str(\"mongodb://localhost:27017\").await?;",
      "new": "use sqlx::PgPool;\n    let pool = PgPool::connect(\"postgres://localhost:5432/acme\").await?;",
      "unified": "@@ -1,2 +1,2 @@\n-use mongodb::Client;\n-    let client = Client::with_uri_str(\"mongodb://localhost:27017\").await?;\n+use sqlx::PgPool;\n+    let pool = PgPool::connect(\"postgres://localhost:5432/acme\").await?;\n",
      "added_lines": 2,
      "removed_lines": 2
    },
    "git": {
      "sha": "0718293a4b5c",
      "branch": "feat/persistence-pivot"
    },
    "episode_id": "9f34266f8d171446e94eb9d7ec8076f5d498aabeeab560cdc8140892b5c219c8"
  },
  {
    "node": "binding",
    "from": "decision:cur-sess-007:4",
    "to": "episode:9f34266f8d171446e94eb9d7ec8076f5d498aabeeab560cdc8140892b5c219c8",
    "relation": "produced",
    "prov": {
      "used_session": "cur-sess-007",
      "used_decision": "decision:cur-sess-007:4",
      "was_generated_by_session": "cur-sess-007",
      "t_use": "2026-06-22T20:00:40Z",
      "t_gen": "2026-06-22T20:00:45Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
