crates/memscribe-testkit/tests/snapshots/nodes__cursor__v1__subagent_thread.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "cur-sess-008",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use a dedicated background worker for the email queue. Extract the send loop into a worker module.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      },
      {
        "rule_id": "action.restructure_into",
        "category": "action_request",
        "matched_text": "Extract the send loop into",
        "offset": 61
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/cursor/v1/subagent_thread.jsonl",
        "byte_offset": 191,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use a dedicated background worker for the email queue.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T21:00:06Z"
  },
  {
    "node": "conversation",
    "session_id": "cur-sess-008b",
    "turn_range": {
      "start": 4,
      "end": 5
    },
    "text": "Use a dedicated worker module: extract the email send loop into src/worker/email.rs and spawn it from main.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "Use",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/cursor/v1/subagent_thread.jsonl",
        "byte_offset": 1297,
        "line_no": 5
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Use a dedicated worker module: extract the email send loop into src/worker/email.rs and spawn it from main.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 4,
      "end": 5
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T21:00:15Z"
  },
  {
    "node": "decision",
    "epitome": "Extracting the send loop into a worker module and spawning it from main.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 5,
      "end": 6
    },
    "fact_status": "deterministically_derived",
    "timestamp": "2026-06-22T21:00:22Z",
    "decided_by": "cursor-pro"
  },
  {
    "node": "episode",
    "path": "src/worker/email.rs",
    "diff": {
      "path": "src/worker/email.rs",
      "old": "",
      "new": "pub async fn run_email_worker() {\n    loop { drain_email_queue().await; }\n}\n",
      "unified": "@@ -0,0 +1,3 @@\n+pub async fn run_email_worker() {\n+    loop { drain_email_queue().await; }\n+}\n",
      "added_lines": 3,
      "removed_lines": 0
    },
    "git": {
      "sha": "18293a4b5c6d",
      "branch": "feat/worker-split"
    },
    "episode_id": "e6835b14c7ae0755fa66f2753782cf6d7f7b973a6f9c2f7df9124e3c4e8e6d04"
  },
  {
    "node": "episode",
    "path": "src/main.rs",
    "diff": {
      "path": "src/main.rs",
      "old": "    send_emails_inline();",
      "new": "    tokio::spawn(worker::email::run_email_worker());",
      "unified": "@@ -1 +1 @@\n-    send_emails_inline();\n+    tokio::spawn(worker::email::run_email_worker());\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "18293a4b5c6d",
      "branch": "feat/worker-split"
    },
    "episode_id": "1529b870d85b811d0ef6f634949a51de72b1052ae056c65f97c860143e9836a7"
  },
  {
    "node": "binding",
    "from": "decision:cur-sess-008b:5",
    "to": "episode:1529b870d85b811d0ef6f634949a51de72b1052ae056c65f97c860143e9836a7",
    "relation": "produced",
    "prov": {
      "used_session": "cur-sess-008b",
      "used_decision": "decision:cur-sess-008b:5",
      "was_generated_by_session": "cur-sess-008b",
      "t_use": "2026-06-22T21:00:22Z",
      "t_gen": "2026-06-22T21:00:22Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:cur-sess-008b:5",
    "to": "episode:e6835b14c7ae0755fa66f2753782cf6d7f7b973a6f9c2f7df9124e3c4e8e6d04",
    "relation": "produced",
    "prov": {
      "used_session": "cur-sess-008b",
      "used_decision": "decision:cur-sess-008b:5",
      "was_generated_by_session": "cur-sess-008b",
      "t_use": "2026-06-22T21:00:22Z",
      "t_gen": "2026-06-22T21:00:22Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
