crates/memscribe-testkit/tests/snapshots/nodes__cursor__v1__tool_failure.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "cur-sess-004",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Add a retry wrapper around the deploy step in deploy.sh.",
    "markers": [
      {
        "rule_id": "action.bare_imperative",
        "category": "action_request",
        "matched_text": "Add a retry",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/cursor/v1/tool_failure.jsonl",
        "byte_offset": 162,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Add a retry wrapper around the deploy step in deploy.sh.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "statistically_ranked",
    "timestamp": "2026-06-22T17:05:00Z"
  }
]
